tests/typechecking/valid/let_rec_poly.ml
let rec f x = x
in ignore (f 1.)
