tests/typechecking/invalid/call_bad_arg_2.ml
let rec f x = x + 1 in
ignore (f 1 2); ()
